# devicer

./: .gitignore  README.md  pyproject.toml
src/devicer/: __init__.py  cache.py  get_device.py
